fix(handlers): redhat s/command/shell/

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -39,7 +39,7 @@
     - ansible_os_family == "Debian"
 
 - name: Restart webserver - docker,redhat
-  ansible.builtin.command:  # noqa no-changed-when
+  ansible.builtin.shell:  # noqa no-changed-when
     cmd: "pkill httpd; /usr/sbin/httpd"
   when:
     - (ansible_virtualization_type is defined and ansible_virtualization_type == "docker")
