ci(default): skip supervisor verify if Debian and container

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -226,3 +226,5 @@
           - "'misp-workers:' in sup.stdout"
           - "'RUNNING' in sup.stdout"
           - sup.rc == 0
+      when:
+        - not (ansible_distribution == "Debian" and is_container | bool)
