ci: add github workflow run with nginx as experimental

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -39,6 +39,9 @@ jobs:
           - molecule_distro: 'debian:bookworm'
             experimental: false
             suite: default
+          - molecule_distro: 'ubuntu:24.04'
+            experimental: true
+            suite: default-nginx
     env:
       ANSIBLE_CALLBACKS_ENABLED: profile_tasks
       MOLECULE_NO_LOG: "false"
