--- a/.github/workflows/default-bare.yml
+++ b/.github/workflows/default-bare.yml
@@ -29,6 +29,10 @@ jobs:
             version: '22.04'
             suite: default
             experimental: false
+          - distribution: ubuntu
+            version: '24.04'
+            suite: default-nginx
+            experimental: true
     env:
       ANSIBLE_CALLBACKS_ENABLED: profile_tasks
       ANSIBLE_EXTRA_VARS: "-e misp_mysql_user=root -e misp_mysql_pass=root"
