ci(default-nginx): fix molecule name

--- a/molecule/default-nginx/molecule.yml
+++ b/molecule/default-nginx/molecule.yml
@@ -18,7 +18,7 @@ provisioner:
     defaults:
       verbosity: 2
 scenario:
-  name: default
+  name: default-nginx
   test_sequence:
     - dependency
     # - lint
