fix: is_container condition and ci debug msg

--- a/molecule/default-nginx/converge.yml
+++ b/molecule/default-nginx/converge.yml
@@ -27,6 +27,14 @@
       when: >
         (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 16) or
         (ansible_os_family == "RedHat" and ansible_distribution_major_version | int >= 8)
+    - name: Debian | Refresh apt cache
+      ansible.builtin.apt:
+        update_cache: yes
+        cache_valid_time: 3600
+      when: ansible_os_family == "Debian"
+    - name: Debug | var ansible_virtualization_type
+      ansible.builtin.debug:
+        var: ansible_virtualization_type
     - name: 22.04 | Set fact
       ansible.builtin.set_fact:
         misp_version: '2.4'
