--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,7 +37,10 @@
     is_container: true
   when: >
     (ansible_virtualization_type is defined and
-      (ansible_virtualization_type == "docker" or ansible_virtualization_type == "containerd")
+      (ansible_virtualization_type == "docker"
+       or ansible_virtualization_type == "container"
+       or ansible_virtualization_type == "containerd"
+      )
     )
 
 - name: Import debian
