--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -32,6 +32,9 @@
         update_cache: yes
         cache_valid_time: 3600
       when: ansible_os_family == "Debian"
+    - name: Debug | var ansible_virtualization_type
+      ansible.builtin.debug:
+        var: ansible_virtualization_type
     - name: RedHat | Ensure ps is present
       ansible.builtin.package:
         name:
