ci(default-nginx): set site server_name to avoid nginx error
[emerg]: could not build server_names_hash, you should
increase server_names_hash_bucket_size: 64
because of github ci long.internal.cloudapp.net

--- a/molecule/default-nginx/converge.yml
+++ b/molecule/default-nginx/converge.yml
@@ -74,6 +74,7 @@
     misp_webserver: 'nginx'
     harden_nginx_php_variants: ['fpm', 'cli']
     hardenwebserver_https_template: nginx-misp.conf.j2
+    site_server_name: localhost
   roles:
     - { role: juju4.redhat_epel, when: ansible_os_family == 'RedHat' }
     - juju4.harden_nginx
