--- a/.github/workflows/default-bare.yml
+++ b/.github/workflows/default-bare.yml
@@ -51,6 +51,7 @@ jobs:
             github.com:443
             packages.microsoft.com:443
             pypi.org:443
+            www.google.com:1025
       - name: Checkout code
         uses: actions/checkout@v5.0.0
         with:
