--- a/.github/workflows/default-bare.yml
+++ b/.github/workflows/default-bare.yml
@@ -45,10 +45,14 @@ jobs:
         with:
           egress-policy: block
           allowed-endpoints: >
+            api.launchpad.net:443
             azure.archive.ubuntu.com:80
+            composer.github.io:443
+            database.clamav.net:443
             esm.ubuntu.com:443
             files.pythonhosted.org:443
             galaxy.ansible.com:443
+            getcomposer.org:443
             github.com:443
             packages.microsoft.com:443
             pypi.org:443
