--- a/.github/workflows/default-bare.yml
+++ b/.github/workflows/default-bare.yml
@@ -57,6 +57,10 @@ jobs:
             github.com:443
             keyserver.ubuntu.com:80
             packages.microsoft.com:443
+            packagist.org:443
+            pecl.php.net:80
+            pecl.php.net:443
+            ppa.launchpadcontent.net:443
             pypi.org:443
             repo.packagist.org:443
             www.google.com:1025
