--- a/.github/workflows/default-bare.yml
+++ b/.github/workflows/default-bare.yml
@@ -63,7 +63,10 @@ jobs:
             ppa.launchpadcontent.net:443
             pypi.org:443
             repo.packagist.org:443
+            rubygems.org:443
+            index.rubygems.org:443
             www.google.com:1025
+            *.status.modsecurity.org:443
       - name: Checkout code
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
