--- a/.github/workflows/default-bare.yml
+++ b/.github/workflows/default-bare.yml
@@ -214,6 +214,13 @@ jobs:
           tail -50 /var/log/apache2/misp.local_error.log
         if: ${{ always() }}
         continue-on-error: true
+      - name: After script - nginx config
+        run: |
+          set -x
+          sudo cat /etc/nginx/sites-enabled/misp.conf
+          sudo cat /etc/nginx/nginx.conf
+        if: ${{ always() }}
+        continue-on-error: true
       - name: After script - nginx logs
         run: |
           set -x
